<resources>
    <string name="app_name">Holy Prays</string>
    <string name="app_name_persian">شمیم بهشت</string>
    <string name="day_monday">ذکر روز دوشنبه</string>
    <string name="monday_pray">یا قاضیَ الحاجات</string>
    <string name="day_tuesday">ذکر روز سه شنبه</string>
    <string name="tuesday_pray">یا أَرْحَمَ الرَّاحِمِین</string>
    <string name="day_wednesday">ذکر روز چهار شنبه</string>
    <string name="wednesday_pray">یا حَیُّ یا قَیّومُ</string>
    <string name="day_thursday">ذکر روز پنج شنبه</string>
    <string name="thursday_pray">لا إِلهَ إِلَّا اللَّهُ المَلِک الحقّ المُبین</string>
    <string name="day_friday">ذکر روز جمعه</string>
    <string name="friday_pray">الّلهُمَّ صَلِّ عَلَی مُحَمَّدٍ وَآلِ مُحَمَّدٍ</string>
    <string name="day_saturday">ذکر روز شنبه</string>
    <string name="saturday_pray">یا رَبِّ الْعالَمِین</string>
    <string name="day_sunday">ذکر روز یک شنبه</string>
    <string name="sunday_pray">یا ذَالجَلالِ وَ اْلاِکْرام</string>
    <string name="day_pray_text_frame">day pray text frame</string>
    <string name="prays">دعا ها</string>
    <string name="prays_tag">PRAYS</string>
    <string name="sore">سوره ها</string>
    <string name="sore_tag">SORE</string>
    <string name="namaz_taghibat">تعقیبات نماز</string>
    <string name="namaz_taghibat_tag">NAMAZ_TAGHIBAT</string>
    <string name="namaz">نماز ها</string>
    <string name="namaz_tag">NAMAZ</string>
    <string name="ramdan_pray">ماه رمضان</string>
    <string name="ghadr_nights_tag">GHADR_NIGHTS</string>
    <string name="ghadr_nights">اعمال شب های قدر</string>
    <string name="remedy">یاد بود</string>
    <string name="ramdan_pray_tag">RAMADAN_PRAY</string>
    <string name="zirat">زیارات</string>
    <string name="zirat_tag">ZIARAT</string>
    <string name="week_zirat">زیارات هفته</string>
    <string name="week_zirat_tag">WEEK_ZIARAT</string>
    <string name="back_navigation_icon">back navigation icon</string>
    <string name="recycler_item_logo">recycler item logo</string>
    <string name="divider">divider</string>
    <string name="add_text_size">add text size</string>
    <string name="minus_text_size">minus text size</string>
    <string name="ic_play">icon play</string>
    <string name="ic_stop">icon stop</string>
    <string name="main_background_image">main background image</string>
    <string name="ic_dark_mode">icon dark mode</string>
    <string name="ic_translation">icon persian translation</string>
    <string name="corner_image">corner image</string>
    <string name="app_description">منتخب ادعیه و قرآن</string>
    <string name="text_setting">تنظیمات متن</string>
    <string name="sound_setting">تنظیمات صوت</string>
    <string name="setting">تنظیمات</string>
    <string name="choose_one">یک گزینه را انتخاب کنید</string>
    <string name="memorial">یاد بود</string>
    <string name="counter">ذکر شمار</string>
    <string name="persian_font_size">اندازه فونت فارسی</string>
    <string name="arabic_font_title">اندازه فونت عربی</string>
    <string name="bolded_text">بولد کردن متن</string>
    <string name="arabic_typeface_title">فونت عربی</string>
    <string name="nabi_font_name">نبی</string>
    <string name="person_memorial">وقف عاشق الحسين (ع) مرحوم حاج جعفر ترابچى كربلائي</string>
    <string name="besmellah">بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ</string>
    <string name="besmellah_persian">به نام خداوند بخشنده و مهربان</string>
    <string name="save_new_setting">ذخیره تنظیمات جدید</string>
    <string name="select_quran_singer">قاری قرآن</string>
    <string name="select_pray_singer">دعا خوان</string>
    <string name="play_speed">سرعت پخش</string>
    <string name="reciter_selection_alert">انتخاب قاری برای سوره ها امکان پذیر است</string>
    <string name="zero_time">00:00</string>
    <string name="count">شمارش</string>
    <string name="reset">بازنشانی</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">مرحوم حاج جعفر ترابچى كربلائي</string>
    <string name="memorial_des">روح ایشان قرین رحمت الهی</string>
    <string name="memorial_des2">این برنامه وقف مرحوم حاج جعفر ترابچى كربلائي می باشد \n حجت شادی رو مرحوم فاتحه ذکر شود</string>
</resources>