<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layoutDirection="rtl"
    android:background="@color/background_white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/back_navigation_icon"
        android:scaleType="fitXY"
        android:src="@drawable/main_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/corner_top_left"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:contentDescription="@string/corner_image"
        android:scaleType="fitCenter"
        android:src="@drawable/corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/corner_top_right"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:contentDescription="@string/corner_image"
        android:scaleType="fitCenter"
        android:scaleX="-1"
        android:src="@drawable/corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/iran_sans_medium"
        tools:text="سوره ها"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/corner_top_left"
        app:layout_constraintStart_toStartOf="@id/corner_top_right"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_choose_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/iran_sans_medium"
        android:text="@string/choose_one"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/corner_top_left"
        app:layout_constraintStart_toStartOf="@id/corner_top_right"
        app:layout_constraintTop_toBottomOf="@id/txt_category" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pray_list_recycler"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layoutDirection="rtl"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/corner_top_right"
        app:layout_constraintStart_toStartOf="@+id/corner_top_left"
        app:layout_constraintTop_toBottomOf="@+id/txt_choose_one"
        tools:listitem="@layout/pray_list_recycler_item_second" />

</androidx.constraintlayout.widget.ConstraintLayout>